# ultimate-rag-bootcamp

./: .env.example  requirements.txt
00-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  6-databaseparsing.ipynb
01-VectorEmbedding&Databases/: 01_embedding.ipynb  03_openaiembeddings.ipynb
02-VectorStores&VectorDatabases/: 1-chromadb-todo.ipynb  1-chromadb.ipynb  2-faiss.ipynb  3-Othervectorstores.ipynb
03-AdvancedChunking/: 1-semantichunking.ipynb
04-HybridSearchStrategies/: 01-densesparse.ipynb  1-densesparse.ipynb  2-reranking.ipynb  3-mmr.ipynb
05-Query Enhancement/: 01-queryexpansion.ipynb  03-HyDE.ipynb  1-queryexpansion.ipynb  2-querydecomposition.ipynb  3-HyDE.ipynb
06-Multimodal/: 01-multimodalopenai.ipynb  1-multimodalopenai.ipynb
Deep-agents-With-Langchain/: main.py  pyproject.toml  requirements.txt  streamlit_app.py
Deep-agents-With-Langchain/deepagentsdemo/: 1-basicsdeepagent.ipynb  2-contextengineering.ipynb  3-backends.ipynb  4-subagents.ipynb
Deep-agents-With-Langchain/deepagentsdemo/notes/: todo.txt
Deep-agents-With-Langchain/deepagentsdemo/projects/: AGENTS.md
Deep-agents-With-Langchain/deepagentsdemo/skills/aws/: SKILL.md  examples.md  instructions.md
Deep-agents-With-Langchain/deepagentsdemo/skills/langgraph/: SKILL.md  examples.md  instructions.md
Deep-agents-With-Langchain/deepagentsdemo/skills/python/: SKILL.md  examples.md  instructions.md
Deep-agents-With-Langchain/deepagentsdemo/skills/report-writer/: SKILL.md  examples.md  instructions.md
(+72 files in other folders)
