[project]
name = "deepagentscourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.3.4",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langchain-quickjs>=0.1.4",
    "python-dotenv>=1.2.1",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.17",
]
